--- a/Steps/Steps.module.less
+++ b/Steps/Steps.module.less
@@ -17,13 +17,6 @@
 		}
 
 		&.highlightCurrentOnly {
-			font-size: @sand-steps-step-highlight-current-only-font-size;
-			margin: @sand-steps-step-highlight-current-only-margin;
-
-			&.current {
-				font-size: @sand-steps-step-highlight-current-only-current-font-size;
-			}
-
 			&.future {
 				opacity: @sand-steps-step-highlight-current-only-future-opacity;
 			}
@@ -42,14 +35,3 @@
 		}
 	}
 }
-
-.applySkins({
-	.step {
-		&.highlightCurrentOnly {
-			color: @sand-steps-step-highlight-current-only-color;
-			&.current {
-				color: @sand-steps-step-highlight-current-only-current-color;
-			}
-		}
-	}
-});
