--- a/styles/colors.less
+++ b/styles/colors.less
@@ -310,6 +310,11 @@
 @sand-mediaslider-disabled-bar-opacity: 0.3;
 @sand-mediaslider-fill-bg-color: @sand-progress-color;
 
+// PageViews
+// ---------------------------------------
+@sand-pageviews-page-indicator-bg-color: rgb(111, 118, 128, 1);
+@sand-pageviews-page-indicator-current-bg-color: @sand-component-text-color;
+
 // Picker
 // ---------------------------------------
 @sand-picker-text-color: @sand-text-color;
@@ -409,11 +414,6 @@
 @sand-spinner-bg-color: @sand-component-bg-color;
 @sand-spinner-text-color: @sand-component-text-color;
 @sand-spinner-text-shadow-color: @sand-shadow-color;
-
-// Steps
-// ---------------------------------------
-@sand-steps-step-highlight-current-only-color: rgb(111, 118, 128, 1);
-@sand-steps-step-highlight-current-only-current-color: @sand-component-text-color;
 
 // Switch
 // ---------------------------------------
