--- a/styles/variables.less
+++ b/styles/variables.less
@@ -162,8 +162,6 @@
 @sand-picker-font-size:             54px;
 @sand-picker-joined-font-size:      66px;
 @sand-steps-step-number-font-size:  54px;
-@sand-steps-step-highlight-current-only-font-size:         24px;
-@sand-steps-step-highlight-current-only-current-font-size: 42px;
 @sand-switch-icon-font-size:        84px;
 @sand-switch-icon-font-size-large:  138px;
 @sand-tablayout-tab-font-size:      66px;
@@ -764,6 +762,11 @@
 @sand-pageviews-navigation-button-area-width: 216px;
 @sand-pageviews-steps-area-min-height: 132px;
 @sand-pageviews-dot-steps-area-min-height: @sand-pageviews-steps-area-min-height;
+@sand-pageviews-dot-stpes-page-indicator-size: 18px;
+@sand-pageviews-dot-stpes-page-indicator-margin: 0 15px;
+@sand-pageviews-dot-stpes-page-indicator-border-radius: 999px;
+@sand-pageviews-dot-stpes-page-indicator-current-size: 30px;
+@sand-pageviews-dot-stpes-page-indicator-current-margin: 0 9px;
 @sand-pageviews-full-steps-area-min-height: @sand-pageviews-steps-area-min-height;
 @sand-pageviews-full-steps-position-bottom: 0;
 @sand-pageviews-number-navigation-button-area-width: 108px;
@@ -942,7 +945,6 @@
 @sand-steps-step-number-font-weight: 600;
 @sand-steps-margin: 0;
 @sand-steps-step-margin: 0 @sand-component-spacing;
-@sand-steps-step-highlight-current-only-margin: 9px;
 @sand-steps-step-past-opacity: 1;
 @sand-steps-step-current-opacity: 1;
 @sand-steps-step-future-opacity: 0.2;
